--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.loader {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    display: block;
+    position: relative;
+    color: #a4a4a4;
+    box-sizing: border-box;
+    animation: animloader 1s linear infinite alternate;
+    margin-left: 50px;
+}
+
+@keyframes animloader {
+    0% {
+        box-shadow: -38px -6px, -14px 6px, 14px -6px;
+    }
+
+    33% {
+        box-shadow: -38px 6px, -14px -6px, 14px 6px;
+    }
+
+    66% {
+        box-shadow: -38px -6px, -14px 6px, 14px -6px;
+    }
+
+    100% {
+        box-shadow: -38px 6px, -14px -6px, 14px 6px;
+    }
+}
